--- a/index.html
+++ b/index.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
-<html ng-app="myApp">
+<html ng-app="meusus">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
+
+	<link rel="stylesheet" href="css/style.css">
+
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular-i18n/1.5.8/angular-locale_pt-br.min.js"></script>
-	<script type="text/javascript" src="node_modules/angular-ui-mask/dist/mask.min.js"></script>
 	<script type="text/javascript" src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
-	<script type="text/javascript" src="js/main.js"></script>
-	<link rel="stylesheet" href="css/style.css">
+
+	<script type="text/javascript" src="js/modules.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
+
+	<!-- controllers -->
+	<script type="text/javascript" src="js/controllers/HomeController.js"></script>
+	<script type="text/javascript" src="js/controllers/UnidadesController.js"></script>
+	<script type="text/javascript" src="js/controllers/UnidadeDetalheController.js"></script>
+
 </head>
-<body ng-controller="MainController as c">
+<body>
+
 	<ui-view></ui-view>
+
 </body>
 </html>
