--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 	<title>MeuSUS - O SUS mais perto de você</title>
 
 	<link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular-i18n/1.5.8/angular-locale_pt-br.min.js"></script>
 	<script type="text/javascript" src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script type="text/javascript" src="node_modules/angular-slugify/angular-slugify.js"></script>
 
 	<!-- modules -->
 	<script type="text/javascript" src="js/app.js"></script>
